--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">fotosbootcamp</string>
+    <string name="app_name">Fotos Bootcamp</string>
+    <string name="txt_img">Selecione a imagem</string>
+    <string name="bt_txt_description">Selecione uma Imagem</string>
 </resources>
